--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <head>
        <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
       <title>KINGS MUNENE PORTFOLIO</title>
-      <h1 KINGS MUNENE</h1>
+      <h1> KINGS MUNENE</h1>
     </head>
     <body>
-
   </body>
 </html>
