--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
   <html>
     <head>
-       <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+       <link href="css/style.css"rel="stylesheet" type="text/css" media="all">
       <title>KINGS MUNENE PORTFOLIO</title>
-      <h1> KINGS MUNENE</h1>
+      <h1> KINGS MUNENE PORTFOLIO</h1>
     </head>
     <body>
+       <p class="introduction">Hello! My name is kings munene </p>
+       <p class="introduction">I'm a student at Moringa School prepfull time class.
+       <div class="test-box">
+         <h2><strong> About Me<h2>
+           <img src="img/kings.jpg" alt="A photo of kings">
+         </div>
+
   </body>
 </html>
