--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
   <html>
     <head>
-       <link href="css/style.css"rel="stylesheet" type="text/css" media="all">
+      <link href="css/style.css"rel="stylesheet" type="text/css" media="all">
       <title>KINGS MUNENE PORTFOLIO</title>
       <h1> KINGS MUNENE PORTFOLIO</h1>
     </head>
     <body>
-       <p class="introduction">Hello! My name is kings munene </p>
-       <p class="introduction">I'm a student at Moringa School prepfull time class.
-       <div class="test-box">
-         <h2><strong> About Me<h2>
-           <img src="img/kings.jpg" alt="A photo of kings">
-         </div>
-
+      <p class="introduction">Hello! My name is kings munene </p>
+      <p class="introduction">I'm a student at Moringa School prepfull time class.</p>
+      <h2>About Me </h2>
+      <div class="box">
+      <h3> Education background</h3>
+          <ul>
+            <li>2019-Present Moringa School</li>
+            <li>2016-Present Jomokenyatta University of Agriculture and Technology</li>
+            <li>2013-2015 Brilliant School
+            <li>2003-2011 Ellas Junior acadamy
+         </ul>
+        </div>
+        <p> I had this overwhelming urge to learn programming and <strong>moringa school</strong> happened to be the place for me. I was lucky to secure a spot in the ongoing class that commence on<strong> 4th February 2019.</strong></p>
+        <p> Am glad am finally doing this.</p>
+        <h3>Interests</h3>
+        <ol>
+          <li>Information Technology</li>
+          <li>Music</li>
+          <li>Sports</li>
+        </ol>
+      <img src="img/kings.jpg" alt="A photo of kings">
   </body>
 </html>
