--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <li>Information Technology</li>
           <li>Music</li>
           <li>Sports</li>
+          <li>coding</li>
         </ol>
+        <p>here are
       <img src="img/kings.jpg" alt="A photo of kings">
   </body>
 </html>
