--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
       <h1> KINGS MUNENE PORTFOLIO</h1>
     </head>
     <body>
-      <p class="introduction">Hello! My name is kings munene </p>
-      <p class="introduction">I'm a student at Moringa School prepfull time class.</p>
+      <p class="introduction">Hello! My name is kings munene</p>
+      <p class="introduction">I'm a student at Moringa School.Prep full time class</p>
       <h2>About Me </h2>
       <div class="box">
-      <h3> Education background</h3>
-          <ul>
-            <li>2019-Present Moringa School</li>
-            <li>2016-Present Jomokenyatta University of Agriculture and Technology</li>
-            <li>2013-2015 Brilliant School
-            <li>2003-2011 Ellas Junior acadamy
-         </ul>
-        </div>
-        <p> I had this overwhelming urge to learn programming and <strong>moringa school</strong> happened to be the place for me. I was lucky to secure a spot in the ongoing class that commence on<strong> 4th February 2019.</strong></p>
-        <p> Am glad am finally doing this.</p>
+        <h3> Education background</h3>
+        <ul>
+          <li>2019-Present Moringa School</li>
+          <li>2016-Present Jomokenyatta University of Agriculture and Technology</li>
+          <li>2013-2015 Brilliant School</li>
+          <li>2003-2011 Ellas Junior acadamy</li>
+        </ul>
         <h3>Interests</h3>
         <ol>
           <li>Information Technology</li>
@@ -27,7 +24,11 @@
           <li>Sports</li>
           <li>coding</li>
         </ol>
-        <p>here are
+      </div>
+        <h4>MY HANDS ON CODE</h4>
+        <p>In this age code runs the world. I want to be part of the team behind the codes. </p>
+        <p><strong>My Projects</p>
+          
       <img src="img/kings.jpg" alt="A photo of kings">
   </body>
 </html>
