--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <h4>MY HANDS ON CODE</h4>
         <p>In this age code runs the world. I want to be part of the team behind the codes. </p>
         <p><strong>My Projects</p>
-          
+        <p>Here is a link  <a href="https://github.com/KingsMunene/cookie-recipe2">cookie recipe website</a></p>
+        <p>My first website <a href="https://github.com/KingsMunene/my-first-website.github.io"> link</a></p>
       <img src="img/kings.jpg" alt="A photo of kings">
   </body>
 </html>
